--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "fixtures": "fixtures-ts-node-commonjs load --require=dotenv/config --require=tsconfig-paths/register --dataSource=./src/data-source.ts --ignoreDecorators test/fixtures",
     "start": "node dist/main.js",
-    "start:dev": "NODE_OPTIONS='-r @suncin/dotenv' nest start --watch",
+    "start:dev": "nest start --watch",
     "start:repl": "NODE_OPTIONS='-r @suncin/dotenv' nest start --entryFile repl",
     "start:debug": "NODE_OPTIONS='-r @suncin/dotenv' nest start --debug --watch",
     "migration:run": "typeorm migration:run -d dist/data-source",
@@ -36,6 +36,7 @@
     "class-validator": "^0.13.2",
     "connect-pg-simple": "^8.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
