--- a/kube.yaml
+++ b/kube.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-micro-services
-  namespace: mini-wallet
+  namespace: auth-micro-services
 spec:
   replicas: 2
   selector:
@@ -17,6 +17,12 @@ spec:
         - name: api
           image: sudtanj/auth-micro-services:latest
           env:
+            - name: APP_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: mysecret
+                  key: APP_SECRET
+                  optional: false
             - name: PORT
               valueFrom:
                 secretKeyRef:
@@ -30,7 +36,7 @@ spec:
                   key: DATABASE_URL
                   optional: false
           ports:
-            - containerPort: 80
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
@@ -43,7 +49,7 @@ spec:
   ports:
     - port: 5000
       name: http
-      targetPort: 80
+      targetPort: 3000
   selector:
     app: auth-micro-services
 ---
@@ -62,6 +68,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: auth-micro-services
+                name: auth-micro-services-service
                 port:
                   number: 5000
